--- a/hello.html
+++ b/hello.html
@@ -2,9 +2,14 @@
 <html lang="en">
     <head>
         <title>Hello!</title>
+        <style>
+            h1 {
+                color: aqua;
+            }
+        </style>
     </head>
     <body>
-        <h1 style="color: blue;">Tambah headings<h1>
+        <h1>Tambah headings<h1>
         <h1>Tambah headings!!<h1>
         <h2>Tambah headings 2</h2>
         Hello, world!
