--- a/hi.html
+++ b/hi.html
@@ -2,6 +2,13 @@
 <html lang="en">
     <head>
         <title>Hello!</title>
+        <style>
+            p {
+                color: tomato;
+                font-family: Arial, Helvetica, sans-serif;
+                background-color: aqua;
+            }
+        </style>
     </head>
     <body>
         Hello, world!
