--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,9 @@
         <style>
             h1 {
                 color: aqua;
+                background-color: bisque;
+                font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+            }
         </style>
     </head>
     <body>
